# penny

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  AI_Financial_Advisor_PRD.md  README.md  ai_advisor.py  app.py  finance_analysis.py  pyproject.toml  requirements.txt  test_gemini_connection.py  utils.py  visualization.py
.streamlit/: config.toml
src/penny/: __init__.py  ai_advisor.py  app.py  config.py  exceptions.py  finance_analysis.py  visualization.py
src/penny/utils/: __init__.py  cache.py  export.py  formatting.py  sanitize.py  validation.py
src/penny/views/: __init__.py  chat.py  dashboard.py  goals.py  sidebar.py
tests/: conftest.py  test_ai_advisor.py  test_finance_analysis.py  test_utils.py
